Fixed z-index & margins

--- a/css/phytoplankton-core/main.css
+++ b/css/phytoplankton-core/main.css
@@ -841,6 +841,10 @@ img {
     z-index: 1;
     margin-bottom: 16px;
     margin-bottom: 1rem;
+    margin-left: 2px;
+    margin-left: 0.125rem;
+    margin-right: 2px;
+    margin-right: 0.125rem;
     padding-bottom: 16px;
     padding-bottom: 1rem;
     padding-top: 16px;
@@ -876,8 +880,8 @@ img {
       padding-left: 29px;
       padding-left: 1.8125rem; }
   .phytoplankton-menu > ul > li > ul > li > ul > li > ul > li.active > a {
-    border-left: 2px solid #c5cae9;
-    color: #c5cae9;
+    border-left: 2px solid #3f51b5;
+    color: #3f51b5;
     cursor: default;
     padding-left: 28px;
     padding-left: 1.75rem; }
@@ -944,39 +948,26 @@ img {
 .phytoplankton-menu__list__item__subheader {
   background-color: #fff;
   color: rgba(0, 0, 0, 0.87); }
+  .phytoplankton-menu__list__item__subheader:hover {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    position: relative;
+    z-index: 1;
+    z-index: 3; }
+  .phytoplankton-menu__list__item__subheader:active {
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: relative;
+    z-index: 2;
+    transition: box-shadow .25s ease-in-out; }
   .phytoplankton-menu__list__item__subheader.active {
     background-color: #3f51b5;
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     z-index: 2;
-    color: #fff;
-    margin-left: -4px;
-    margin-left: -0.25rem;
-    margin-right: -4px;
-    margin-right: -0.25rem; }
+    color: #fff; }
     .phytoplankton-menu__list__item__subheader.active:hover {
       box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       position: relative;
       z-index: 2; }
-    .phytoplankton-menu__list__item__subheader.active:active {
-      box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      position: relative;
-      z-index: 2; }
-  .phytoplankton-menu__list__item__subheader:hover {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
-    position: relative;
-    z-index: 1;
-    z-index: 1; }
-  .phytoplankton-menu__list__item__subheader:active {
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: relative;
-    z-index: 2;
-    margin-left: -4px;
-    margin-left: -0.25rem;
-    margin-right: -4px;
-    margin-right: -0.25rem;
-    transition: box-shadow .25s ease-in-out;
-    transition: margin .25s ease-in-out; }
 
 .phytoplankton-page {
   float: right;
